# noise-lab

./: .gitignore  BUILD.md  CLAUDE.md  CMakeLists.txt  Makefile  README.md  README_VST.md  SimpleNoiseGenerator.cpp  build_workaround.sh  design-document.md  noise-lab.maxproj  package-lock.json  package.json
.github/: README.md
.github/workflows/: build.yml
assets/: README.md
src/: EffectsProcessor.cpp  EffectsProcessor.h  EnvelopeGenerator.cpp  EnvelopeGenerator.h  FilterProcessor.cpp  FilterProcessor.h  JuceHeader.h  LFOGenerator.cpp  LFOGenerator.h  NoiseGenerator.cpp  NoiseGenerator.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
standalone/: NoiseGenerator.h
